# paperless-ngx-ocr2

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  HIGH_PRIORITY_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  MEDIUM_LOW_PRIORITY_IMPROVEMENTS.md  README.md  TEST_INFRASTRUCTURE_IMPROVEMENTS.md  build.rs  clippy.toml  docker-compose.yml  migration_suggestions_test_cli_basic.rs.txt  migration_suggestions_test_cli_errors.rs.txt  migration_suggestions_test_cli_json.rs.txt  migration_suggestions_test_cli_logging.rs.txt  migration_suggestions_test_config_loading.rs.txt  migration_suggestions_test_detailed_benchmarks.rs.txt  migration_suggestions_test_docker.rs.txt  migration_suggestions_test_error_handling.rs.txt  migration_suggestions_test_file.rs.txt  migration_suggestions_test_large_files.rs.txt  migration_suggestions_test_memory.rs.txt  migration_suggestions_test_network.rs.txt  migration_suggestions_test_ocr_workflow.rs.txt  migration_suggestions_test_performance_large_files.rs.txt  migration_suggestions_test_performance_memory.rs.txt  migration_suggestions_test_streaming.rs.txt  paperless-ngx-ocr2.1  renovate.json  rustfmt.toml
.cargo/: config.toml
.cursor/: mcp.json
.cursor/rules/: specify-rules.mdc  tool-usage.mdc
.github/workflows/: ci.yml  pre-commit.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
examples/: README.md
examples/configs/: basic.toml  development.toml  production.toml
examples/docker/: Dockerfile.example  README.md  docker-compose.yml
examples/scripts/: batch-process.sh  docker-run.sh  setup-env.sh
scripts/: generate-man.sh  migrate-tests.sh  security-check.sh  setup-pre-commit.sh
specs/001-ocr-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ocr-cli/contracts/: api_error.json  api_request.json  api_response.json  cli_output.json  file_upload_request.json  file_upload_response.json
src/: cache.rs  config.rs  credentials.rs  error.rs  file.rs  lib.rs  main.rs  metrics.rs  ocr.rs
src/api/: auth.rs  error.rs  files.rs  mod.rs  ocr.rs
src/cli/: commands.rs  mod.rs
tests/: test_api_error_contract.rs  test_cli_basic.rs  test_cli_errors.rs  test_cli_improved.rs  test_cli_json.rs  test_cli_logging.rs  test_cli_output_contract.rs  test_config_loading.rs  test_error_handling.rs  test_file_upload_contract.rs  test_network.rs  test_ocr_api_contract.rs  test_ocr_workflow.rs  test_performance_large_files.rs  test_performance_memory.rs  test_utilities_demo.rs
tests/common/: README.md  config.rs  contracts.rs  fixtures.rs  mock.rs  mod.rs  performance.rs
tests/container/: common.rs  test_docker.rs
tests/fixtures/: README.md  invalid.txt
tests/integration/: common.rs  test_config_loading.rs  test_file_upload_contract.rs  test_network.rs  test_utilities_demo.rs
tests/performance/: common.rs  test_detailed_benchmarks.rs  test_large_files.rs  test_memory.rs  test_streaming.rs
tests/unit/: common.rs  test_api.rs  test_cli.rs  test_config.rs  test_error.rs  test_file.rs  test_file_improved.rs
