[package]
name = "paperless-ngx-ocr2"
version = "0.1.0"
edition = "2021"
authors = ["Sean Brandt <seanb4t@fzymgc.dev>"]
description = "OCR CLI tool that uploads PDF/image files to Mistral AI APIs for text extraction"
repository = "https://github.com/fzymgc-house/paperless-ngx-ocr2"
license = "MIT"
keywords = ["ocr", "cli", "mistral", "pdf", "image"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[[bin]]
name = "paperless-ngx-ocr2"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate"] }
tokio = { version = "1.0", features = ["full"] }

# File handling
mime_guess = "2.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Environment file loading
dotenv = "0.15"

# Metrics and lazy initialization
lazy_static = "1.4"

# Random number generation for retry jitter
rand = "0.8"

[dev-dependencies]
# CLI testing
assert_cmd = "2.0"
predicates = "3.0"

# Test utilities
tempfile = "3.0"
wiremock = "0.5"

# Documentation generation
clap_mangen = "0.2"
clap_complete = "4.4"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_mangen = "0.2"
clap_complete = "4.4"

[profile.release]
# Optimize for binary size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
